[gd_scene load_steps=7 format=3 uid="uid://cpgwq645feqk5"]

[ext_resource type="PackedScene" uid="uid://weeybc4svd5r" path="res://scenes/resume_button.tscn" id="1_e8te4"]
[ext_resource type="Script" path="res://scenes/GUI/pause_menu.gd" id="1_iblhy"]
[ext_resource type="Theme" uid="uid://bdanof2i81six" path="res://resources/theme_main.tres" id="1_u5x2h"]
[ext_resource type="PackedScene" uid="uid://b8oc51q6nuc30" path="res://scenes/quit_game_button.tscn" id="2_wsf4n"]
[ext_resource type="PackedScene" uid="uid://bhc0eu58em6ts" path="res://scenes/GUI/main_menu.tscn" id="5_yiokt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q72ky"]
bg_color = Color(1, 1, 1, 1)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_u5x2h")
script = ExtResource("1_iblhy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -433.0
offset_top = -384.5
offset_right = 433.0
offset_bottom = 384.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -393.0
offset_top = -273.5
offset_right = 393.0
offset_bottom = -143.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="ResumeButton" parent="Panel/HBoxContainer" instance=ExtResource("1_e8te4")]
layout_mode = 2
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")

[node name="QuitGameButton" parent="Panel/HBoxContainer" instance=ExtResource("2_wsf4n")]
layout_mode = 2
scene_to_load = ExtResource("5_yiokt")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 79.0
offset_top = 132.5
offset_right = -79.0
offset_bottom = 364.5
grow_horizontal = 2
theme_override_font_sizes/font_size = 120
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseButton" type="Button" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
offset_left = 48.0
offset_top = 48.0
offset_right = 139.0
offset_bottom = 152.0
focus_mode = 0

[node name="Panel" type="Panel" parent="PauseButton"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 25.0
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q72ky")

[node name="Panel2" type="Panel" parent="PauseButton"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q72ky")

[connection signal="pressed" from="Panel/HBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
